Update workflow and arrange titles

--- a/htr-united.yml
+++ b/htr-united.yml
@@ -1,4 +1,4 @@
-authors:
+au thors:
 - name: Leroy
   orcid: 0000-0002-7843-5050
   roles:
@@ -141,7 +141,8 @@ script-type: only-manuscript
 time:
   notAfter: '1499'
   notBefore: '1200'
-title: HTRomance - Medieval French Manuscripts
+title: HTRomance, Medieval French corpus of ground-truth for Handwritten Text Recognition
+  and Layout Segmentation
 transcription-guidelines: >2-
 
   The transcription guidelines are described in a paper available on
