--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,4 +50,4 @@ jobs:
           pip install htrvx
       - name: Run HTRVX
         run: |
-          find . -type f -name "*.xml" ! -name "*.chocomufin.xml" -exec htrvx --verbose --verbose-level low --group --format alto --check-empty --segmonto --xsd  {} \;
+          find . -type f -name "*.xml" ! -name "*.chocomufin.xml" -print0 | xargs -0 htrvx --verbose --verbose-level low --group --format alto --check-empty --segmonto --xsd
